fix (theme): block vertical spacing editor selector

--- a/src/scss/02-tools/_m-block-vertical-spacing.scss
+++ b/src/scss/02-tools/_m-block-vertical-spacing.scss
@@ -22,7 +22,7 @@
  *
  */
 @mixin block-vertical-spacing($type : margin, $spacing : var(--spacing--block-3)) {
-    #{context-selector(".blocks-container > &", ".is-root-container &")} {
+    #{context-selector(".blocks-container > &", ".is-root-container > &, .is-root-container > .wp-block[data-align] > &, .is-root-container > .acf-block-preview > &, .is-root-container > .wp-block[data-align] > .acf-block-preview > &")} {
         #{$type}-top: $spacing;
         #{$type}-bottom: $spacing;
 
